syntax = "proto3";

package proto;

option go_package = "core/protobuf/";

enum Direction {
  NONE  = 0;
  LEFT  = 1;
  RIGHT = 2;
  UP    = 3;
  DOWN  = 4;
}

message MoveAction {
  Direction dir = 1;
}

message ShootAction {
  // shoot target coordinates
  Position target = 1;
}

message PlayerAction {
  oneof action {
    MoveAction  move  = 1;
    ShootAction shoot = 2;
  }
}

message PlayerInput {
  repeated PlayerAction player_actions = 1;
  uint32                player_id      = 2;
}

message Position {
  float x = 1;
  float y = 2;
}

message PlayerState {
  Position pos    = 1;
  uint32   health = 2;
}

message BulletState {
  Position pos  = 1;
  float    size = 2;
}

message WorldState {
  repeated PlayerState players = 1;
  repeated BulletState bullets = 2;
}

message ConnectRequest {
  string game_name = 1;
}

message ConnectAck {
  uint32 player_id = 1;
}

message GameMessage {
  oneof payload {
    WorldState     world           = 1;
    PlayerInput    player_input    = 2;
    ConnectRequest connect_request = 3;
    ConnectAck     connect_ack     = 4;
  }
}